--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -31,6 +31,12 @@ body {
   }
 }
 
+.container-fluid {
+  width: 80%;
+  position: relative;
+  margin: 40px auto 0 auto;
+}
+
 .card-container {
   display: flex;
   flex-direction: row;
