chore : added single character view

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -18,6 +18,14 @@ body {
   margin: 0;
 }
 
+.slide-enter-active,
+.slide-leave-active {
+  transition: opacity 0.5s;
+}
+.slide-enter, .slide-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
+
 .col-md-4 {
   width: 33.33333333%;
   padding: 0 15px;
